mais um ajuste na responsividade

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Em uma escala de 0 a 10 como você avalia a Digital College?
                 </p>
                 <div class="buttons">
-                <button id="btn-0"class="btn" data="btn-detratores">0</button>
+                <button id="btn-0"class="btn" value="rodolpho" data="btn-detratores">0</button>
                 <button id="btn-1"class="btn" data="btn-detratores">1</button>
                 <button id="btn-2"class="btn" data="btn-detratores">2</button>
                 <button id="btn-3"class="btn" data="btn-detratores">3</button>
@@ -60,6 +60,9 @@
             <button type="submit" class="btn-submit">Enviar</button>
         </div>    
     </section>
+  <script type="text/javascript" src="./js/script.js"></script>
+
 </body>
-</main>
+
+
 </html>
