--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/ico" href="./images/Vector.ico">
-    
+
     <title>Calculadora NPS DC</title>
 </head>
 <body>
@@ -25,42 +25,183 @@
                     <h3>Queremos aprender com 2 perguntas, como está sendo sua experiência conosco.</h3>
                 </div>
                 <p>
-                    Em uma escala de 0 a 10 como você avalia a Digital College?
+                    1. Em uma escala de 0 a 10 qual a possibilidade
+                    de você recomendar a Digital College para seus familiares ou amigos?
                 </p>
                 <div class="buttons">
-                <button id="btn-0"class="btn" value="rodolpho" data="btn-detratores">0</button>
-                <button id="btn-1"class="btn" data="btn-detratores">1</button>
-                <button id="btn-2"class="btn" data="btn-detratores">2</button>
-                <button id="btn-3"class="btn" data="btn-detratores">3</button>
-                <button id="btn-4"class="btn" data="btn-detratores">4</button>
-                <button id="btn-5"class="btn" data="btn-detratores">5</button>
-                <button id="btn-6"class="btn" data="btn-detratores">6</button>
-                <button id="btn-7"class="btn" data="btn-neutro">7</button>
-                <button id="btn-8"class="btn" data="btn-neutro">8</button>
-                <button id="btn-9"class="btn" data="btn-promotores">9</button>
-                <button id="btn-10"class="btn" data="btn-promotores">10</button>
-            </div>
-            <p>
-                Em uma escala de 0 a 10 qual a possibilidade
-                de você recomendar a Digital College para seus familiares ou amigos?
-            </p>
-            <div class="buttons">
-                <button id="btn-0"class="btn" data="btn-detratores">0</button>
-                <button id="btn-1"class="btn" data="btn-detratores">1</button>
-                <button id="btn-2"class="btn" data="btn-detratores">2</button>
-                <button id="btn-3"class="btn" data="btn-detratores">3</button>
-                <button id="btn-4"class="btn" data="btn-detratores">4</button>
-                <button id="btn-5"class="btn" data="btn-detratores">5</button>
-                <button id="btn-6"class="btn" data="btn-detratores">6</button>
-                <button id="btn-7"class="btn" data="btn-neutro">7</button>
-                <button id="btn-8"class="btn" data="btn-neutro">8</button>
-                <button id="btn-9"class="btn" data="btn-promotores">9</button>
-                <button id="btn-10"class="btn" data="btn-promotores">10</button>
-            </div>
-            <button type="submit" class="btn-submit">Enviar</button>
-        </div>    
-    </section>
-  <script type="text/javascript" src="./js/script.js"></script>
+                    <button id="btn-0"class="btn" data="detratores" value="0">0</button>
+                    <button id="btn-1"class="btn" data="detratores">1</button>
+                    <button id="btn-2"class="btn" data="detratores">2</button>
+                    <button id="btn-3"class="btn" data="detratores">3</button>
+                    <button id="btn-4"class="btn" data="detratores">4</button>
+                    <button id="btn-5"class="btn" data="detratores">5</button>
+                    <button id="btn-6"class="btn" data="detratores">6</button>
+                    <button id="btn-7"class="btn" data="neutro">7</button>
+                    <button id="btn-8"class="btn" data="neutro">8</button>
+                    <button id="btn-9"class="btn" data="promotores">9</button>
+                    <button id="btn-10"class="btn" data="promotores">10</button>
+                </div>
+                <p>
+                   2. Em uma escala de 0 a 10 qual a possibilidade
+                    de você recomendar a Digital College para seus familiares ou amigos?
+                </p>
+                <div class="buttons">
+                    <button id="btn-0"class="btn" data="detratores" value="0">0</button>
+                    <button id="btn-1"class="btn" data="detratores">1</button>
+                    <button id="btn-2"class="btn" data="detratores">2</button>
+                    <button id="btn-3"class="btn" data="detratores">3</button>
+                    <button id="btn-4"class="btn" data="detratores">4</button>
+                    <button id="btn-5"class="btn" data="detratores">5</button>
+                    <button id="btn-6"class="btn" data="detratores">6</button>
+                    <button id="btn-7"class="btn" data="neutro">7</button>
+                    <button id="btn-8"class="btn" data="neutro">8</button>
+                    <button id="btn-9"class="btn" data="promotores">9</button>
+                    <button id="btn-10"class="btn" data="promotores">10</button>
+                </div>
+                <p>
+                    3. Em uma escala de 0 a 10 qual a possibilidade
+                    de você recomendar a Digital College para seus familiares ou amigos?
+                </p>
+                <div class="buttons">
+                    <button id="btn-0"class="btn" data="detratores" value="0">0</button>
+                    <button id="btn-1"class="btn" data="detratores">1</button>
+                    <button id="btn-2"class="btn" data="detratores">2</button>
+                    <button id="btn-3"class="btn" data="detratores">3</button>
+                    <button id="btn-4"class="btn" data="detratores">4</button>
+                    <button id="btn-5"class="btn" data="detratores">5</button>
+                    <button id="btn-6"class="btn" data="detratores">6</button>
+                    <button id="btn-7"class="btn" data="neutro">7</button>
+                    <button id="btn-8"class="btn" data="neutro">8</button>
+                    <button id="btn-9"class="btn" data="promotores">9</button>
+                    <button id="btn-10"class="btn" data="promotores">10</button>
+                </div>
+                <p>
+                    4. Em uma escala de 0 a 10 qual a possibilidade
+                    de você recomendar a Digital College para seus familiares ou amigos?
+                </p>
+                <div class="buttons">
+                    <button id="btn-0"class="btn" data="detratores" value="0">0</button>
+                    <button id="btn-1"class="btn" data="detratores">1</button>
+                    <button id="btn-2"class="btn" data="detratores">2</button>
+                    <button id="btn-3"class="btn" data="detratores">3</button>
+                    <button id="btn-4"class="btn" data="detratores">4</button>
+                    <button id="btn-5"class="btn" data="detratores">5</button>
+                    <button id="btn-6"class="btn" data="detratores">6</button>
+                    <button id="btn-7"class="btn" data="neutro">7</button>
+                    <button id="btn-8"class="btn" data="neutro">8</button>
+                    <button id="btn-9"class="btn" data="promotores">9</button>
+                    <button id="btn-10"class="btn" data="promotores">10</button>
+                </div>
+                <p>
+                    5. Em uma escala de 0 a 10 qual a possibilidade
+                    de você recomendar a Digital College para seus familiares ou amigos?
+                </p>
+                <div class="buttons">
+                    <button id="btn-0"class="btn" data="detratores" value="0">0</button>
+                    <button id="btn-1"class="btn" data="detratores">1</button>
+                    <button id="btn-2"class="btn" data="detratores">2</button>
+                    <button id="btn-3"class="btn" data="detratores">3</button>
+                    <button id="btn-4"class="btn" data="detratores">4</button>
+                    <button id="btn-5"class="btn" data="detratores">5</button>
+                    <button id="btn-6"class="btn" data="detratores">6</button>
+                    <button id="btn-7"class="btn" data="neutro">7</button>
+                    <button id="btn-8"class="btn" data="neutro">8</button>
+                    <button id="btn-9"class="btn" data="promotores">9</button>
+                    <button id="btn-10"class="btn" data="promotores">10</button>
+                </div>
+                <p>
+                    6. Em uma escala de 0 a 10 qual a possibilidade
+                    de você recomendar a Digital College para seus familiares ou amigos?
+                </p>
+                <div class="buttons">
+                    <button id="btn-0"class="btn" data="detratores" value="0">0</button>
+                    <button id="btn-1"class="btn" data="detratores">1</button>
+                    <button id="btn-2"class="btn" data="detratores">2</button>
+                    <button id="btn-3"class="btn" data="detratores">3</button>
+                    <button id="btn-4"class="btn" data="detratores">4</button>
+                    <button id="btn-5"class="btn" data="detratores">5</button>
+                    <button id="btn-6"class="btn" data="detratores">6</button>
+                    <button id="btn-7"class="btn" data="neutro">7</button>
+                    <button id="btn-8"class="btn" data="neutro">8</button>
+                    <button id="btn-9"class="btn" data="promotores">9</button>
+                    <button id="btn-10"class="btn" data="promotores">10</button>
+                </div>
+                <p>
+                    7. Em uma escala de 0 a 10 qual a possibilidade
+                    de você recomendar a Digital College para seus familiares ou amigos?
+                </p>
+                <div class="buttons">
+                    <button id="btn-0"class="btn" data="detratores" value="0">0</button>
+                    <button id="btn-1"class="btn" data="detratores">1</button>
+                    <button id="btn-2"class="btn" data="detratores">2</button>
+                    <button id="btn-3"class="btn" data="detratores">3</button>
+                    <button id="btn-4"class="btn" data="detratores">4</button>
+                    <button id="btn-5"class="btn" data="detratores">5</button>
+                    <button id="btn-6"class="btn" data="detratores">6</button>
+                    <button id="btn-7"class="btn" data="neutro">7</button>
+                    <button id="btn-8"class="btn" data="neutro">8</button>
+                    <button id="btn-9"class="btn" data="promotores">9</button>
+                    <button id="btn-10"class="btn" data="promotores">10</button>
+                </div>
+                <p>
+                    8. Em uma escala de 0 a 10 qual a possibilidade
+                    de você recomendar a Digital College para seus familiares ou amigos?
+                </p>
+                <div class="buttons">
+                    <button id="btn-0"class="btn" data="detratores" value="0">0</button>
+                    <button id="btn-1"class="btn" data="detratores">1</button>
+                    <button id="btn-2"class="btn" data="detratores">2</button>
+                    <button id="btn-3"class="btn" data="detratores">3</button>
+                    <button id="btn-4"class="btn" data="detratores">4</button>
+                    <button id="btn-5"class="btn" data="detratores">5</button>
+                    <button id="btn-6"class="btn" data="detratores">6</button>
+                    <button id="btn-7"class="btn" data="neutro">7</button>
+                    <button id="btn-8"class="btn" data="neutro">8</button>
+                    <button id="btn-9"class="btn" data="promotores">9</button>
+                    <button id="btn-10"class="btn" data="promotores">10</button>
+                </div>
+                <p>
+                    9. Em uma escala de 0 a 10 qual a possibilidade
+                    de você recomendar a Digital College para seus familiares ou amigos?
+                </p>
+                <div class="buttons">
+                    <button id="btn-0"class="btn" data="detratores" value="0">0</button>
+                    <button id="btn-1"class="btn" data="detratores">1</button>
+                    <button id="btn-2"class="btn" data="detratores">2</button>
+                    <button id="btn-3"class="btn" data="detratores">3</button>
+                    <button id="btn-4"class="btn" data="detratores">4</button>
+                    <button id="btn-5"class="btn" data="detratores">5</button>
+                    <button id="btn-6"class="btn" data="detratores">6</button>
+                    <button id="btn-7"class="btn" data="neutro">7</button>
+                    <button id="btn-8"class="btn" data="neutro">8</button>
+                    <button id="btn-9"class="btn" data="promotores">9</button>
+                    <button id="btn-10"class="btn" data="promotores">10</button>
+                </div>
+                <p>
+                    10. Em uma escala de 0 a 10 qual a possibilidade
+                    de você recomendar a Digital College para seus familiares ou amigos?
+                </p>
+                <div class="buttons">
+                    <button id="btn-0"class="btn" data="detratores" value="0">0</button>
+                    <button id="btn-1"class="btn" data="detratores">1</button>
+                    <button id="btn-2"class="btn" data="detratores">2</button>
+                    <button id="btn-3"class="btn" data="detratores">3</button>
+                    <button id="btn-4"class="btn" data="detratores">4</button>
+                    <button id="btn-5"class="btn" data="detratores">5</button>
+                    <button id="btn-6"class="btn" data="detratores">6</button>
+                    <button id="btn-7"class="btn" data="neutro">7</button>
+                    <button id="btn-8"class="btn" data="neutro">8</button>
+                    <button id="btn-9"class="btn" data="promotores">9</button>
+                    <button id="btn-10"class="btn" data="promotores">10</button>
+                </div>
+                <div class="buttons-submit">
+                    <button type="submit" class="btn-submit">Ver resultado</button>
+                    <button type="submit" class="btn-submit">Enviar</button>
+                </div>
+              
+            </div>    
+        </section>
+        <script type="text/javascript" src="./js/script.js"></script>
 
 </body>
 
