--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <section class="container">
             <div class="calculadora-nps-dc">
                 <img class="logo" src="./images/Vector2.png"/>
-                <div class="header-logo">
+                <div class="introduction">
                     <h3>Hey Collegers,</h3>
                     <h3> Obrigado por escolher a Digital College.</h3>
-                    <h3>Queremos aprender com 2 perguntas, como está sendo sua experiência conosco.</h3>
+                    <h3>Queremos aprender com algumas perguntas, como está sendo sua experiência conosco.</h3>
                 </div>
                 <p>
                     1. Em uma escala de 0 a 10 qual a possibilidade
@@ -195,10 +195,9 @@
                     <button id="btn-10"class="btn" data="promotores">10</button>
                 </div>
                 <div class="buttons-submit">
-                    <button type="submit" class="btn-submit">Ver resultado</button>
+                    <button type="submit" class="btn-submit result">Ver resultado</button>
                     <button type="submit" class="btn-submit">Enviar</button>
                 </div>
-              
             </div>    
         </section>
         <script type="text/javascript" src="./js/script.js"></script>
